--- a/index.html
+++ b/index.html
@@ -2,327 +2,180 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Temukan berbagai resep makanan khas Indonesia dengan gambar, video, dan cara memasak yang mudah dipahami.">
-    <meta name="keywords" content="resep, makanan indonesia, kuliner nusantara, masakan daerah, resep tradisional, makanan khas indonesia">
-    <meta name="author" content="Resep Nusantara">
-    <title>Resep Nusantara | Kuliner Khas Indonesia</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <meta name="description" content="Koperasi Masyarakat - Meningkatkan kesejahteraan bersama melalui kebersamaan">
+    <title>Koperasi Masyarakat</title>
+    <style>
+        /* Reset CSS untuk memastikan tampilan konsisten di berbagai browser */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        header {
+            background: #4CAF50;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #333;
+        }
+
+        nav a {
+            color: white;
+            padding: 15px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+
+        nav a:hover {
+            background-color: #575757;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .hero {
+            background-image: url('https://source.unsplash.com/1600x600/?community,cooperation');
+            background-size: cover;
+            background-position: center;
+            color: white;
+            padding: 100px 20px;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-size: 3em;
+        }
+
+        .hero p {
+            font-size: 1.5em;
+        }
+
+        .grid {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .grid-item {
+            background: white;
+            padding: 20px;
+            flex: 1 1 calc(33.333% - 20px);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .grid-item h2 {
+            font-size: 1.8em;
+            margin-bottom: 10px;
+        }
+
+        .grid-item p {
+            font-size: 1em;
+            line-height: 1.6;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+
+        footer p {
+            margin: 5px 0;
+        }
+
+        .social-icons {
+            margin-top: 10px;
+        }
+
+        .social-icons a {
+            color: white;
+            margin: 0 10px;
+            font-size: 20px;
+            text-decoration: none;
+        }
+
+        @media (max-width: 768px) {
+            .grid-item {
+                flex: 1 1 100%;
+            }
+
+            .hero h1 {
+                font-size: 2.5em;
+            }
+
+            .hero p {
+                font-size: 1.2em;
+            }
+        }
+    </style>
 </head>
 <body>
 
-    <!-- Header -->
     <header>
-        <div class="container">
-            <h1>Resep Nusantara</h1>
-            <nav>
-                <ul>
-                    <li><a href="#beranda">Beranda</a></li>
-                    <li><a href="#kategori">Kategori</a></li>
-                    <li><a href="#resep-unggulan">Resep Unggulan</a></li>
-                    <li><a href="#video-tutorial">Video Tutorial</a></li>
-                    <li><a href="#tentang-kami">Tentang Kami</a></li>
-                    <li><a href="#kontak">Kontak</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h1>Koperasi Masyarakat</h1>
+        <p>Bersama Membangun Ekonomi Kerakyatan</p>
     </header>
 
-    <!-- Banner -->
-    <section id="beranda" class="banner">
-        <img src="images/banner.jpg" alt="Makanan Khas Indonesia">
-        <div class="banner-text">
-            <h2>Temukan Resep Terlezat dari Seluruh Nusantara</h2>
-            <p>Jelajahi kekayaan kuliner Indonesia dengan resep yang mudah dipahami.</p>
-            <form class="search-form">
-                <input type="text" placeholder="Cari Resep..." aria-label="Cari Resep">
-                <button type="submit">Cari</button>
-            </form>
-        </div>
-    </section>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#services">Layanan</a>
+        <a href="#contact">Kontak</a>
+    </nav>
 
-    <!-- Kategori Makanan -->
-    <section id="kategori" class="kategori">
+    <section class="hero" id="home">
         <div class="container">
-            <h2>Kategori Makanan</h2>
-            <p>Pilih dari berbagai kategori makanan khas Nusantara.</p>
-            <div class="kategori-grid">
-                <article class="kategori-item">
-                    <img src="images/rendang.jpg" alt="Masakan Tradisional">
-                    <h3>Masakan Tradisional</h3>
-                    <p>Masakan yang diwariskan turun-temurun dari nenek moyang.</p>
-                    <a href="#">Lihat Resep</a>
-                </article>
-                <article class="kategori-item">
-                    <img src="images/soto.jpg" alt="Masakan Daerah">
-                    <h3>Masakan Daerah</h3>
-                    <p>Resep yang berasal dari berbagai daerah di Indonesia.</p>
-                    <a href="#">Lihat Resep</a>
-                </article>
-                <article class="kategori-item">
-                    <img src="images/gado.jpg" alt="Makanan Penutup">
-                    <h3>Makanan Penutup</h3>
-                    <p>Hidangan penutup manis untuk menyempurnakan makanan.</p>
-                    <a href="#">Lihat Resep</a>
-                </article>
-            </div>
+            <h1>Selamat Datang di Koperasi Kami</h1>
+            <p>Kami berkomitmen untuk memajukan ekonomi masyarakat melalui prinsip kebersamaan dan kesejahteraan bersama.</p>
         </div>
     </section>
 
-    <!-- Resep Unggulan -->
-    <section id="resep-unggulan" class="resep-unggulan">
-        <div class="container">
-            <h2>Resep Unggulan</h2>
-            <p>Pilihan resep terbaik dari seluruh Nusantara.</p>
-            <div class="resep-grid">
-                <article class="resep-item">
-                    <img src="images/rendang.jpg" alt="Rendang Padang">
-                    <h3>Rendang Padang</h3>
-                    <p>Daging sapi yang dimasak dengan bumbu khas Padang hingga empuk dan lezat.</p>
-                    <a href="#">Lihat Detail</a>
-                </article>
-                <article class="resep-item">
-                    <img src="images/soto.jpg" alt="Soto Betawi">
-                    <h3>Soto Betawi</h3>
-                    <p>Kuah santan kental dengan potongan daging sapi, kaya rasa dan gurih.</p>
-                    <a href="#">Lihat Detail</a>
-                </article>
-                <article class="resep-item">
-                    <img src="images/gado.jpg" alt="Gado-Gado">
-                    <h3>Gado-Gado</h3>
-                    <p>Salad sayuran segar dengan saus kacang yang gurih dan manis.</p>
-                    <a href="#">Lihat Detail</a>
-                </article>
-            </div>
+    <section class="container" id="about">
+        <h2>Tentang Kami</h2>
+        <p>Koperasi Masyarakat adalah organisasi ekonomi yang didirikan atas dasar kepentingan bersama. Kami menyediakan layanan permodalan, simpan pinjam, dan dukungan usaha kecil untuk membantu masyarakat mencapai kemandirian ekonomi.</p>
+    </section>
+
+    <section class="container grid" id="services">
+        <div class="grid-item">
+            <h2>Pendanaan Usaha</h2>
+            <p>Kami memberikan pinjaman dengan bunga rendah kepada para anggota yang ingin mengembangkan usahanya, membantu pertumbuhan ekonomi lokal.</p>
+        </div>
+        <div class="grid-item">
+            <h2>Pelatihan dan Edukasi</h2>
+            <p>Kami menyediakan program pelatihan untuk meningkatkan keterampilan bisnis dan manajemen bagi anggota koperasi agar mampu bersaing di pasar modern.</p>
+        </div>
+        <div class="grid-item">
+            <h2>Jasa Simpan Pinjam</h2>
+            <p>Melalui layanan simpan pinjam, anggota dapat menabung dan mendapatkan manfaat dari kebersamaan dalam koperasi, dengan hasil yang adil dan transparan.</p>
         </div>
     </section>
 
-    <!-- Video Tutorial -->
-    <section id="video-tutorial" class="video-tutorial">
-        <div class="container">
-            <h2>Video Tutorial</h2>
-            <p>Lihat tutorial memasak langsung dari para chef Nusantara.</p>
-            <div class="video-grid">
-                <article class="video-item">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Rendang"></iframe>
-                    <h3>Cara Memasak Rendang</h3>
-                </article>
-                <article class="video-item">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Soto"></iframe>
-                    <h3>Cara Memasak Soto Betawi</h3>
-                </article>
-                <article class="video-item">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Gado-Gado"></iframe>
-                    <h3>Cara Membuat Gado-Gado</h3>
-                </article>
-            </div>
-        </div>
-    </section>
-
-    <!-- Tentang Kami -->
-    <section id="tentang-kami" class="tentang-kami">
-        <div class="container">
-            <h2>Tentang Kami</h2>
-            <p>Resep Nusantara adalah platform yang menyediakan berbagai resep makanan khas Indonesia, dari masakan tradisional hingga modern. Kami berdedikasi untuk melestarikan dan menyebarluaskan kelezatan kuliner Nusantara.</p>
-        </div>
-    </section>
-
-    <!-- Kontak -->
-    <section id="kontak" class="kontak">
-        <div class="container">
-            <h2>Kontak Kami</h2>
-            <p>Jika Anda memiliki pertanyaan atau ingin berbagi resep, jangan ragu untuk menghubungi kami.</p>
-            <form action="#" method="post">
-                <label for="name">Nama:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Pesan:</label>
-                <textarea id="message" name="message" rows="4" required></textarea>
-
-                <button type="submit">Kirim Pesan</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Footer -->
     <footer>
-        <div class="container">
-            <p>&copy; 2024 Resep Nusantara. Semua Hak Dilindungi.</p>
-            <ul>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">YouTube</a></li>
-            </ul>
-        </div>
-    </footer>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Temukan berbagai resep makanan khas Indonesia dengan gambar, video, dan cara memasak yang mudah dipahami.">
-    <meta name="keywords" content="resep, makanan indonesia, kuliner nusantara, masakan daerah, resep tradisional, makanan khas indonesia">
-    <meta name="author" content="Resep Nusantara">
-    <title>Resep Nusantara | Kuliner Khas Indonesia</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="images/favicon.png">
-</head>
-<body>
-
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <h1>Resep Nusantara</h1>
-            <nav>
-                <ul>
-                    <li><a href="#beranda">Beranda</a></li>
-                    <li><a href="#kategori">Kategori</a></li>
-                    <li><a href="#resep-unggulan">Resep Unggulan</a></li>
-                    <li><a href="#video-tutorial">Video Tutorial</a></li>
-                    <li><a href="#tentang-kami">Tentang Kami</a></li>
-                    <li><a href="#kontak">Kontak</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Banner -->
-    <section id="beranda" class="banner">
-        <img src="images/banner.jpg" alt="Makanan Khas Indonesia">
-        <div class="banner-text">
-            <h2>Temukan Resep Terlezat dari Seluruh Nusantara</h2>
-            <p>Jelajahi kekayaan kuliner Indonesia dengan resep yang mudah dipahami.</p>
-            <form class="search-form">
-                <input type="text" placeholder="Cari Resep..." aria-label="Cari Resep">
-                <button type="submit">Cari</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Kategori Makanan -->
-    <section id="kategori" class="kategori">
-        <div class="container">
-            <h2>Kategori Makanan</h2>
-            <p>Pilih dari berbagai kategori makanan khas Nusantara.</p>
-            <div class="kategori-grid">
-                <article class="kategori-item">
-                    <img src="images/rendang.jpg" alt="Masakan Tradisional">
-                    <h3>Masakan Tradisional</h3>
-                    <p>Masakan yang diwariskan turun-temurun dari nenek moyang.</p>
-                    <a href="#">Lihat Resep</a>
-                </article>
-                <article class="kategori-item">
-                    <img src="images/soto.jpg" alt="Masakan Daerah">
-                    <h3>Masakan Daerah</h3>
-                    <p>Resep yang berasal dari berbagai daerah di Indonesia.</p>
-                    <a href="#">Lihat Resep</a>
-                </article>
-                <article class="kategori-item">
-                    <img src="images/gado.jpg" alt="Makanan Penutup">
-                    <h3>Makanan Penutup</h3>
-                    <p>Hidangan penutup manis untuk menyempurnakan makanan.</p>
-                    <a href="#">Lihat Resep</a>
-                </article>
-            </div>
-        </div>
-    </section>
-
-    <!-- Resep Unggulan -->
-    <section id="resep-unggulan" class="resep-unggulan">
-        <div class="container">
-            <h2>Resep Unggulan</h2>
-            <p>Pilihan resep terbaik dari seluruh Nusantara.</p>
-            <div class="resep-grid">
-                <article class="resep-item">
-                    <img src="images/rendang.jpg" alt="Rendang Padang">
-                    <h3>Rendang Padang</h3>
-                    <p>Daging sapi yang dimasak dengan bumbu khas Padang hingga empuk dan lezat.</p>
-                    <a href="#">Lihat Detail</a>
-                </article>
-                <article class="resep-item">
-                    <img src="images/soto.jpg" alt="Soto Betawi">
-                    <h3>Soto Betawi</h3>
-                    <p>Kuah santan kental dengan potongan daging sapi, kaya rasa dan gurih.</p>
-                    <a href="#">Lihat Detail</a>
-                </article>
-                <article class="resep-item">
-                    <img src="images/gado.jpg" alt="Gado-Gado">
-                    <h3>Gado-Gado</h3>
-                    <p>Salad sayuran segar dengan saus kacang yang gurih dan manis.</p>
-                    <a href="#">Lihat Detail</a>
-                </article>
-            </div>
-        </div>
-    </section>
-
-    <!-- Video Tutorial -->
-    <section id="video-tutorial" class="video-tutorial">
-        <div class="container">
-            <h2>Video Tutorial</h2>
-            <p>Lihat tutorial memasak langsung dari para chef Nusantara.</p>
-            <div class="video-grid">
-                <article class="video-item">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Rendang"></iframe>
-                    <h3>Cara Memasak Rendang</h3>
-                </article>
-                <article class="video-item">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Soto"></iframe>
-                    <h3>Cara Memasak Soto Betawi</h3>
-                </article>
-                <article class="video-item">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY" title="Video Tutorial Gado-Gado"></iframe>
-                    <h3>Cara Membuat Gado-Gado</h3>
-                </article>
-            </div>
-        </div>
-    </section>
-
-    <!-- Tentang Kami -->
-    <section id="tentang-kami" class="tentang-kami">
-        <div class="container">
-            <h2>Tentang Kami</h2>
-            <p>Resep Nusantara adalah platform yang menyediakan berbagai resep makanan khas Indonesia, dari masakan tradisional hingga modern. Kami berdedikasi untuk melestarikan dan menyebarluaskan kelezatan kuliner Nusantara.</p>
-        </div>
-    </section>
-
-    <!-- Kontak -->
-    <section id="kontak" class="kontak">
-        <div class="container">
-            <h2>Kontak Kami</h2>
-            <p>Jika Anda memiliki pertanyaan atau ingin berbagi resep, jangan ragu untuk menghubungi kami.</p>
-            <form action="#" method="post">
-                <label for="name">Nama:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Pesan:</label>
-                <textarea id="message" name="message" rows="4" required></textarea>
-
-                <button type="submit">Kirim Pesan</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Resep Nusantara. Semua Hak Dilindungi.</p>
-            <ul>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">YouTube</a></li>
-            </ul>
+        <p>&copy; 2024 Koperasi Masyarakat. All Rights Reserved.</p>
+        <div class="social-icons">
+            <a href="https://facebook.com" target="_blank">Facebook</a>
+            <a href="https://twitter.com" target="_blank">Twitter</a>
+            <a href="https://instagram.com" target="_blank">Instagram</a>
         </div>
     </footer>
 
